fixed added test case, need help with spacing

--- a/src/components/Grading/AssignmentsDisplay.css
+++ b/src/components/Grading/AssignmentsDisplay.css
@@ -5,14 +5,31 @@
     overflow: hidden;
 }
 
-.test-cases {
+.base-test-case {
     position: relative;
     top: 100px;
     left: 100px;
     overflow: hidden;
     /*transform: translate(-50%, -50%);*/
+    /*margin: 15px; to add spacing between the test cases and other components nearby*/
+
 }
 
+/*.added-tests > fieldset { */
+.added-tests {
+    position: relative;
+    /*top: 150px; */
+    left: -750px;
+    overflow: hidden;
+    margin: 75px;/*adds space between test cases*/
+
+}
+
+/*fieldset {
+    position: relative;
+    margin: auto;
+}
+*/
 .points {
     position: relative;
 }
